--- a/TESI/WhoPlays/app/src/main/res/values/strings.xml
+++ b/TESI/WhoPlays/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">WhoPlays</string>
-    <string name="menu_filter">filter</string>
-    <string name="filter_name">Filtra</string>
+    <string name="menu_filter">Filtra</string>
     <string name="restore_all">Ripristina tutto</string>
     <string name="search_type">Tipo ricerca</string>
     <string name="order">Ordina per</string>
@@ -29,8 +28,16 @@
     </string-array>
 
     <string-array name="array_ads_of">
-    <item>Solo amici</item>
-    <item>Tutti</item>
+        <item>Solo amici</item>
+        <item>Tutti</item>
     </string-array>
+
+    <string name="setting">Impostazioni</string>
+    <string name="messages">Posta</string>
+    <string name="guide">Guida</string>
+    <string name="myTeam">Le mie squadre</string>
+    <string name="logOut">Log Out</string>
+    <string name="calendar">Calendario</string>
+
 
 </resources>
