--- a/TESI/WhoPlays/app/src/main/res/values/strings.xml
+++ b/TESI/WhoPlays/app/src/main/res/values/strings.xml
@@ -1,5 +1,11 @@
 <resources>
     <string name="app_name">WhoPlays</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
+
     <string name="menu_filter">Filtra</string>
     <string name="restore_all">Ripristina tutto</string>
     <string name="search_type">Tipo ricerca</string>
@@ -7,8 +13,6 @@
     <string name="match_type">Tipo partita</string>
     <string name="distance">Distanza</string>
     <string name="ads_of">Annunci di</string>
-    <string name="open">Open</string>
-    <string name="close">Close</string>
 
 
     <string-array name="array_order">
@@ -32,12 +36,11 @@
         <item>Tutti</item>
     </string-array>
 
-    <string name="setting">Impostazioni</string>
+    <string name="settings">Impostazioni</string>
     <string name="messages">Posta</string>
     <string name="guide">Guida</string>
     <string name="myTeam">Le mie squadre</string>
     <string name="logOut">Log Out</string>
     <string name="calendar">Calendario</string>
-
 
 </resources>
