--- a/TESI/WhoPlays/app/src/main/res/values/strings.xml
+++ b/TESI/WhoPlays/app/src/main/res/values/strings.xml
@@ -67,6 +67,7 @@
     <string name="set_place">Seleziona un luogo</string>
     <string name="set_place_button">Seleziona campo</string>
     <string name="title_activity_maps">Map</string>
+    <string name="confirm_place_button">Continue</string>
 
 
 </resources>
