--- a/TESI/WhoPlays/app/src/main/res/values/strings.xml
+++ b/TESI/WhoPlays/app/src/main/res/values/strings.xml
@@ -69,6 +69,8 @@
     <string name="title_activity_maps">Map</string>
     <string name="confirm_place_button">Continue</string>
     <string name="options_create_ads_menu">opzioni</string>
+    <string name="number_of_player">N° giocatori richiesti</string>
+    <string name="confirm_ads_creation_button">Crea annuncio</string>
 
 
 </resources>
