--- a/TESI/WhoPlays/app/src/main/res/values/strings.xml
+++ b/TESI/WhoPlays/app/src/main/res/values/strings.xml
@@ -69,6 +69,7 @@
     <string name="date_textView">Data:</string>
     <string name="time_textView">Ora:</string>
     <string name="number_of_player_ads">N° di giocatori richiesti</string>
+    <string name="player_added">Giocatori giá registrati:</string>
 
 
 </resources>
