messo bene il tasto home
messo bene il tasto home, e fatto qualche aggiustamento

--- a/TESI/WhoPlays/app/src/main/res/values/strings.xml
+++ b/TESI/WhoPlays/app/src/main/res/values/strings.xml
@@ -29,6 +29,12 @@
         <item>Calcio a 11</item>
     </string-array>
 
+    <string-array name="array_match_type_new_ads">
+        <item>Calcio a 5</item>
+        <item>Calcio a 7</item>
+        <item>Calcio a 11</item>
+    </string-array>
+
 
     <string name="settings">Impostazioni</string>
     <string name="messages">Posta</string>
