--- a/TESI/WhoPlays/app/src/main/res/values/strings.xml
+++ b/TESI/WhoPlays/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="home">Home</string>
+    <string name="add_me">Add me</string>
 
     <string name="menu_filter">Filtra</string>
     <string name="restore_all">Ripristina tutto</string>
