--- a/TESI/WhoPlays/app/src/main/res/values/strings.xml
+++ b/TESI/WhoPlays/app/src/main/res/values/strings.xml
@@ -19,8 +19,8 @@
     <string name="home_button">Home</string>
 
     <string-array name="array_order">
-        <item>date</item>
-        <item>numberOfPlayer</item>
+        <item>Data</item>
+        <item>Numero di giocatori</item>
     </string-array>
 
     <string-array name="array_match_type">
@@ -78,6 +78,7 @@
     <string name="number_of_player_ads">N° di giocatori richiesti</string>
     <string name="player_added">Giocatori giá registrati:</string>
     <string name="address_textView">portami al campo</string>
+    <string name="percentage">%</string>
 
 
 </resources>
