--- a/TESI/WhoPlays/app/src/main/res/values/strings.xml
+++ b/TESI/WhoPlays/app/src/main/res/values/strings.xml
@@ -43,7 +43,7 @@
     <string name="settings">Impostazioni</string>
     <string name="messages">Posta</string>
     <string name="guide">Guida</string>
-    <string name="myTeam">Le mie squadre</string>
+    <string name="myInfo">Le mie info</string>
     <string name="logOut">Log Out</string>
     <string name="calendar">Calendario</string>
 
