--- a/TESI/WhoPlays/app/src/main/res/values/strings.xml
+++ b/TESI/WhoPlays/app/src/main/res/values/strings.xml
@@ -73,16 +73,18 @@
     <string name="options_create_ads_menu">opzioni</string>
     <string name="number_of_player">N° giocatori richiesti:</string>
     <string name="confirm_ads_creation_button">Crea annuncio</string>
-    <string name="creator_textView">Creatore richiesta</string>
+
+    //activity find player
+    <string name="creator_textView">Creatore richiesta:</string>
     <string name="place_textView">Campo:</string>
     <string name="title_list_ads">Annunci disponibili</string>
     <string name="date_textView">Data:</string>
     <string name="time_textView">Ora:</string>
-    <string name="number_of_player_ads">N° di giocatori richiesti</string>
+    <string name="number_of_player_ads">N° di giocatori richiesti:</string>
     <string name="player_added">Giocatori giá registrati:</string>
     <string name="address_textView">portami al campo</string>
     <string name="percentage">%</string>
     <string name="button_filter">Applica</string>
-
+    <string name="type_of_match_home">Tipo partita:</string>
 
 </resources>
