--- a/TESI/WhoPlays/app/src/main/res/values/strings.xml
+++ b/TESI/WhoPlays/app/src/main/res/values/strings.xml
@@ -86,5 +86,6 @@
     <string name="percentage">%</string>
     <string name="button_filter">Applica</string>
     <string name="type_of_match_home">Tipo partita:</string>
+    <string name="my_team">Le mie squadre</string>
 
 </resources>
