--- a/TESI/WhoPlays/app/src/main/res/values/strings.xml
+++ b/TESI/WhoPlays/app/src/main/res/values/strings.xml
@@ -93,6 +93,7 @@
     <string name="button_team_choice_type_activity">Squadra</string>
     <string name="insert_nick_name_edit_text">Inserisci qui il tuo nick-name</string>
     <string name="nick_name_button">Salva nick-name</string>
-    <string name="add_new_team_my_team">aggiungi muova squadra</string>
+    <string name="add_new_team_my_team">Aggiungi una nuova squadra</string>
+    <string name="search_team_my_team_text_view">Cerca una squadra gia esistente</string>
 
 </resources>
